<?xml version="1.0"?>
<package>
  <name>asv_ctrl_vo</name>
  <version>1.1.0</version>
  <description>The asv_ctrl_vo package</description>

  <maintainer email="stenersen.thomas@gmail.com">Thomas Stenersen</maintainer>

  <license>MIT</license>

  <url type="website">http://github.com/thomsten/ros_asv_system</url>

  <author email="stenersen.thomas@gmail.com">Thomas Stenersen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>asv_simulator</build_depend>
  <build_depend>asv_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>asv_simulator</run_depend>
  <run_depend>asv_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
