<?xml version="1.0"?>
<package>
  <name>asv_mission_ctrl</name>
  <version>0.0.0</version>
  <description>The asv_mission_ctrl package</description>
  
  <maintainer email="stenersen.thomas@gmail.com">Thomas Stenersen</maintainer>

  <license>MIT</license>

  <url type="repository">http://github.com/thomsten/asv_simulator</url>

  <author email="stenersen.thomas@gmail.com">Thomas Stenersen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>

</package>
