<?xml version="1.0"?>
<package>
  <name>asv_msgs</name>
  <version>1.0.0</version>
  <description>The asv_msgs package</description>

  <maintainer email="stenersen.thomas@gmail.com">Thomas Stenersen</maintainer>
  <author email="stenersen.thomas@gmail.com">Thomas Stenersen</author>

  <license>MIT</license>

  <url type="website">http://github.com/thomsten/ros_asv_system</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
