<?xml version="1.0"?>
<package>
  <name>asv_obstacle_tracker</name>
  <version>1.1.0</version>
  <description>The asv_obstacle_tracker package</description>

  <maintainer email="stenersen.thomas@gmail.com">Thomas Stenersen</maintainer>
  <license>MIT</license>

  <author email="stenersen.thomas@gmail.com">Thomas Stenersen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>asv_msgs</build_depend>
  <build_depend>asv_simulator</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>asv_msgs</run_depend>
  <run_depend>asv_simulator</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>
